--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 1rem;
         padding: 0.75rem 1rem;
         border-bottom: 1px solid var(--border);
@@ -55,7 +56,26 @@
       .controls {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         gap: 0.75rem;
+      }
+
+      .filters {
+        display: flex;
+        align-items: center;
+        gap: 0.65rem;
+        padding: 0.3rem 0.55rem;
+        border: 1px solid var(--border);
+        border-radius: 8px;
+        background: #f7fafc;
+        font-size: 0.85rem;
+      }
+
+      .filters label {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.3rem;
+        color: var(--muted);
       }
 
       .hint {
@@ -162,6 +182,12 @@
         <h1 class="title">IFC Model Viewer (Starter)</h1>
         <div class="controls">
           <p class="hint" id="status">Load an IFC file to begin.</p>
+          <div class="filters">
+            <strong>Visibility</strong>
+            <label><input type="checkbox" id="filter-walls" checked />Walls</label>
+            <label><input type="checkbox" id="filter-slabs" checked />Slabs</label>
+            <label><input type="checkbox" id="filter-doors" checked />Doors</label>
+          </div>
           <label class="btn btn-primary" id="open-btn" for="file-input">Open IFC</label>
           <input type="file" id="file-input" accept=".ifc" />
         </div>
